<resources>
    <string name="app_name">PathVisualizer</string>
    <string name="block">X</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="source">S</string>
    <string name="destination">D</string>
    <string name="solve">Solve</string>
    <string name="clear">Clear</string>
    <string name="dfs">DFS</string>
    <string name="bfs">BFS</string>
    <string name="djikstra">Djikstra</string>
    <string name="bellmanFord">BellmanFord</string>
</resources>